# arson

./: .gitignore  LICENSE.txt  Makefile  README.md  SPEC.md  pyproject.toml  setup.cfg
src/arson/: __init__.py
tests/: __init__.py  test_arson.py
